OLMIS-829: User can configure FTP/local properties
A user can decide whenever a CSV file related with an order
should be stored locally or transfer to a FTP server when
the order is created.
